src/snapshots/transactions__test__dispute.snap
---
source: src/main.rs
expression: all_output

---
client,available,held,total,locked
1,0.5,1,1.5,false
Stderr:
failed to process `TransactionInfo { kind: Withdrawal, client_id: ClientId(1), tx_id: TransactionId(7), amount: Some(2.5) }`: invalid price provided

