src/snapshots/transactions__test__multiple_dispute_disallowed.snap
---
source: src/main.rs
expression: all_output

---
client,available,held,total,locked
1,1.5,0,1.5,false
Stderr:
failed to process `TransactionInfo { kind: Dispute, client_id: ClientId(1), tx_id: TransactionId(5), amount: None }`: invalid transaction state (expected Processed, found InDispute)
failed to process `TransactionInfo { kind: Dispute, client_id: ClientId(1), tx_id: TransactionId(5), amount: None }`: invalid transaction state (expected Processed, found DisputeHandled)

