src/snapshots/transactions__test__negative_available_on_chargeback.snap
---
source: src/main.rs
expression: all_output

---
client,available,held,total,locked
1,-2.3,0.7,-1.6,true
Stderr:

