src/snapshots/transactions__test__negative_available_on_dispute.snap
---
source: src/main.rs
expression: all_output

---
client,available,held,total,locked
1,-15,20,5,false
Stderr:

