src/snapshots/transactions__test__negative_held_on_dispute.snap
---
source: src/main.rs
expression: all_output

---
client,available,held,total,locked
1,10,-5,5,false
Stderr:

