src/snapshots/transactions__test__resolve.snap
---
source: src/main.rs
expression: all_output

---
client,available,held,total,locked
1,1.5,0,1.5,false
Stderr:
failed to process `TransactionInfo { kind: Withdrawal, client_id: ClientId(1), tx_id: TransactionId(6), amount: Some(1) }`: invalid price provided

