src/snapshots/transactions__test__serde.snap
---
source: src/main.rs
expression: all_output

---
client,available,held,total,locked
1,1.5000,0.2000,1.7000,true
2,0.00,0.00,0.00,true
Stderr:

